# AI-CODE-REVIEW-BOT-

./: README.md
AI CODE REVIEW BOT/: pyproject.toml  requirements.txt
AI CODE REVIEW BOT/aicr/: cli.py
AI CODE REVIEW BOT/aicr/core/: analyzers.py  diff_parser.py  formatter.py  git_utils.py  llm.py  review_models.py  reviewer.py
